# math_tutor

./: .gitignore  README.md  apply_coercion.py  combined.py  combined_scripts.py  compile_tests.sh  concat_scripts.sh  conftest.py  context.txt  contracts.py  demo.py  get_needed_files.sh  pyproject.toml  raw_test.py  scratch_raw.py  temp_diagnostic.py
src/mathtutor/: contracts.py  main.py  orchestrator.py
src/mathtutor/cas/: equivalence.py  numeric.py  parsing.py
src/mathtutor/data/curricula/: calculus_intro.json  math_tour.json
src/mathtutor/domain/: curriculum.py  generators.py
src/mathtutor/domain/verifiers/: arithmetic.py  base.py  coordinate.py  derivative.py  expression.py  fraction.py  function_value.py  graph_equation.py  inequality.py  integrals.py  limits.py  linear_equation.py  mixed_fraction.py  polynomial.py  sequence.py  system.py  trig.py
src/mathtutor/eval/: learning_curves.py  telemetry.py
src/mathtutor/learner/: bkt.py  scheduling.py
src/mathtutor/llm/: offline.py
src/mathtutor/safety/: claim_cert.py  leak_filter.py
src/mathtutor/tests/: curriculum.py  test_contracts.py  test_eval.py  test_generators.py  test_misconceptions.py  test_numeric.py  test_scaffolding.py  test_scheduling.py  test_verifiers.py
src/mathtutor/tutoring/: misconceptions.py  scaffolding.py
tests/: test_bkt.py  test_curriculum.py  test_curriculum_loader.py  test_orchestrator.py  test_parsing.py  test_safety.py  test_verifiers.py
