[project]
name = "mathtutor"
version = "0.1.0"
description = "My math tutor project"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.6",
    "pytest>=9.1.0",
    "scipy>=1.17.1",
    "sympy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mathtutor"]

[tool.pytest.ini_options]
testpaths = ["src/mathtutor/tests"]
pythonpath = ["src"]
